# Freya

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
Freya/: Freya.sln  Freya.vcxproj
Freya/src/: Freya.cpp
src/: Freya.cpp  Freya.sln  Freya.vcxproj  Freya.vcxproj.filters  Vulkan-Renderer.cpp  Vulkan-Renderer.sln  Vulkan-Renderer.vcxproj  Vulkan-Renderer.vcxproj.filters  main.cpp
src/shaders/: compile.bat
